terraform/modules/vpc/main.tf
resource "aws_vpc" "myvpc" {
    cidr_block = var.cidr_block
}

resource "aws_subnet" "my-subnet-1" {
    vpc_id = aws_vpc.myvpc.id
    cidr_block = var.public_subnet_cidr
    availability_zone = var.availability_zone_1
    map_public_ip_on_launch = true
}

resource "aws_subnet" "my-subnet-2" {
    vpc_id = aws_vpc.myvpc.id
    cidr_block = var.public_subnet_2_cidr
    availability_zone = var.availability_zone_2
    map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "RT" {
    vpc_id = aws_vpc.myvpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
  
}

resource "aws_route_table_association" "rta1" {
    subnet_id = aws_subnet.my-subnet-1.id
    route_table_id = aws_route_table.RT.id
}

resource "aws_route_table_association" "rta2" {
    subnet_id = aws_subnet.my-subnet-2.id
    route_table_id = aws_route_table.RT.id
}

resource "aws_security_group" "web-sg" {
    vpc_id = aws_vpc.myvpc.id
    name = "web"
    ingress {
        description = "HTTP from VPC"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "Web-sg"
    }
  
}

resource "aws_s3_bucket" "example" {
  bucket = "amisha-terraform-2025-project"
}
